--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-filesaver",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "index.js",
   "typings": "index.d.ts",
   "description": "Simple file save with FileSaver.js",
@@ -47,9 +47,7 @@
     "file-saver": "^1.3.3"
   },
   "peerDependencies": {
-    "@angular/core": "^4.0.1",
-    "@angular/common": "^4.0.1",
-    "@angular/http": "^4.0.1"
+    "file-saver": "^1.3.3"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
