--- a/src/package.json
+++ b/src/package.json
@@ -1,13 +1,9 @@
 {
   "name": "ngx-filesaver",
-  "version": "0.0.1",
   "dependencies": {
     "file-saver": "*"
   },
   "peerDependencies": {
-    "@angular/common": "*",
-    "@angular/compiler": "*",
-    "@angular/core": "*",
-    "@angular/forms": "*"
+    "file-saver": "*"
   }
 }
