build: Support Angular5, releases: 1.0.0

--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,6 @@
 {
   "name": "ngx-filesaver",
-  "dependencies": {
-    "file-saver": "*"
-  },
   "peerDependencies": {
-    "file-saver": "*"
+    "file-saver": "^1.3.3"
   }
 }
