--- a/demo/src/tsconfig.json
+++ b/demo/src/tsconfig.json
@@ -3,12 +3,10 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "noEmitHelpers" :true,
     "lib": ["es6", "dom"],
     "types": [
       "jasmine",
-      "webpack",
-      "dragula"
+      "webpack"
     ],
     "mapRoot": "./",
     "module": "es6",
