--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-filesaver",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "main": "index.js",
   "typings": "index.d.ts",
   "description": "Simple file save with FileSaver.js",
@@ -25,23 +25,17 @@
   },
   "homepage": "https://github.com/cipchk/ngx-filesaver#readme",
   "scripts": {
-    "lite-server": "lite-server -c demo/bs-config.json",
-    "demo.serve": "run-s build link demo.build lite-server",
+    "demo.serve": "run-s build link demo.build",
     "demo.gh-pages": "run-s build demo.build demo.deploy",
     "demo.build": "ng build -prod",
     "demo.deploy": "gh-pages -d demo/dist",
     "link": "ngm link -p src --here",
     "lint": "exit 0",
-    "disable-lint": "tslint \"**/*.ts\" -c tslint.json --fix --type-check -t prose -e \"node_modules/**\" -e \"dist/**\" -e \"temp/**\" -e \"scripts/docs/**\"",
-    "flow.changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
-    "flow.github-release": "conventional-github-releaser -p angular",
     "build": "ngm build -p src --clean",
     "build.watch": "ngm build -p src --watch --skip-bundles",
-    "start": "ng serve",
     "pretest": "run-s lint build link",
     "test": "ng test -sr",
-    "test-coverage": "ng test -sr -cc",
-    "version": "npm run flow.changelog && git add -A"
+    "test-coverage": "ng test -sr -cc"
   },
   "dependencies": {
     "file-saver": "^1.3.3"
@@ -50,42 +44,39 @@
     "file-saver": "^1.3.3"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/common": "4.0.1",
-    "@angular/compiler": "4.0.1",
-    "@angular/compiler-cli": "4.0.1",
-    "@angular/core": "4.0.1",
-    "@angular/forms": "4.0.1",
-    "@angular/http": "4.0.1",
-    "@angular/language-service": "4.0.1",
-    "@angular/platform-browser": "4.0.1",
-    "@angular/platform-browser-dynamic": "4.0.1",
-    "@angular/router": "4.0.1",
-    "@angular/tsc-wrapped": "4.0.1",
-    "@types/file-saver": "0.0.0",
-    "@types/jasmine": "2.5.47",
+    "@angular/cli": "^1.5.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "@types/file-saver": "0.0.1",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "angular2-markdown": "^1.5.1",
-    "bootstrap": "^3.3.7",
-    "classlist-polyfill": "^1.0.3",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
+    "@types/webpack": "^3.0.14",
+    "codelyzer": "~3.2.0",
+    "core-js": "^2.4.1",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "lite-server": "^2.3.0",
-    "ng2-bootstrap": "^1.6.3",
-    "ngm-cli": "0.5.0",
-    "npm-run-all": "4.0.2",
-    "protractor": "~5.1.1",
-    "ts-helpers": "^1.1.2",
-    "ts-node": "~3.0.2",
-    "tslint": "^4.5.1",
-    "typescript": "~2.2.2",
-    "zone.js": "^0.8.5"
+    "ngm-cli": "^0.8.3",
+    "npm-run-all": "^4.1.1",
+    "protractor": "~5.1.2",
+    "rxjs": "^5.5.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2",
+    "zone.js": "^0.8.14"
   }
 }
