--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "ngx-filesaver",
-  "version": "1.0.0",
-  "main": "index.js",
-  "typings": "index.d.ts",
+  "version": "2.0.0",
+  "main": "./bundles/filesaver.umd.js",
+  "module": "./esm5/filesaver.js",
+  "es2015": "./esm2015/filesaver.js",
+  "typings": "./filesaver.d.ts",
   "description": "Simple file save with FileSaver.js",
   "repository": {
     "type": "git",
@@ -25,58 +27,60 @@
   },
   "homepage": "https://github.com/cipchk/ngx-filesaver#readme",
   "scripts": {
-    "demo.serve": "run-s build link demo.build",
-    "demo.gh-pages": "run-s build demo.build demo.deploy",
-    "demo.build": "ng build -prod",
-    "demo.deploy": "gh-pages -d demo/dist",
-    "link": "ngm link -p src --here",
-    "lint": "exit 0",
-    "build": "ngm build -p src --clean",
-    "build.watch": "ngm build -p src --watch --skip-bundles",
-    "pretest": "run-s lint build link",
-    "test": "ng test -sr",
-    "test-coverage": "ng test -sr -cc"
+    "analyze": "ng build --prod --build-optimizer --stats-json",
+    "lint": "tslint -p tsconfig.json -c tslint.json 'lib/*/*.ts'",
+    "test": "ng test --code-coverage",
+    "site:build": "ng build --prod --build-optimizer",
+    "site:gh": "ng build --prod --build-optimizer --base-href /ngx-filesaver/ && gh-pages -d ./dist",
+    "build": "bash ./build.sh",
+    "release:next": "bash ./build.sh && cd publish && npm publish --access public --tag next",
+    "release": "bash ./build.sh && cd publish && npm publish --access public"
   },
   "dependencies": {
-    "file-saver": "^1.3.3"
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "@types/file-saver": "^1.3.0",
+    "core-js": "^2.5.4",
+    "file-saver": "^1.3.8",
+    "rxjs": "^6.0.0",
+    "zone.js": "^0.8.26"
   },
   "peerDependencies": {
-    "file-saver": "^1.3.3"
+    "@types/file-saver": "^1.3.0",
+    "file-saver": "^1.3.8"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@types/file-saver": "0.0.1",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "@types/webpack": "^3.0.14",
-    "codelyzer": "~3.2.0",
-    "core-js": "^2.4.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular/cli": "~6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codecov": "^3.0.0",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ngm-cli": "^0.8.3",
-    "npm-run-all": "^4.1.1",
-    "protractor": "~5.1.2",
-    "rxjs": "^5.5.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
-    "zone.js": "^0.8.14"
+    "protractor": "~5.3.0",
+    "rollup": "^0.49.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-uglify": "^2.0.1",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
