--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,38 +1,15 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../dist",
-    "target": "es5",
+    "sourceMap": false,
+    "outDir": "../out-tsc/app",
+    "baseUrl": "./",
     "module": "es2015",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    "noImplicitAny": true,
-    "declaration": true,
-    "skipLibCheck": false,
-    "stripInternal": true,
-    "allowSyntheticDefaultImports": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "lib": ["dom", "es6"],
-    "types": [
-      "jasmine"
-    ],
-    "typeRoots": [
-      "../node_modules/@types"
-    ]
+    "types": [],
+    "paths": {
+      "ngx-filesaver": ["../lib/index"],
+      "ngx-filesaver/*": ["../lib/*"]
+    }
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "files": [
-    "../scripts/typings.d.ts",
-    "./index.ts"
-  ],
-  "angularCompilerOptions": {
-    "genDir": "../temp/factories",
-    "strictMetadataEmit": true,
-    "skipTemplateCodegen": true
-  }
+  "exclude": ["test.ts", "**/*.spec.ts"]
 }
