--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "ngx-filesaver",
-  "version": "2.0.1",
-  "main": "./bundles/filesaver.umd.js",
-  "module": "./esm5/filesaver.js",
-  "es2015": "./esm2015/filesaver.js",
-  "typings": "./filesaver.d.ts",
+  "version": "2.1.0",
   "description": "Simple file save with FileSaver.js",
   "repository": {
     "type": "git",
@@ -29,38 +25,34 @@
   "scripts": {
     "analyze": "ng build --prod --build-optimizer --stats-json",
     "lint": "tslint -p tsconfig.json -c tslint.json 'lib/*/*.ts'",
-    "test": "ng test --code-coverage",
+    "test": "ng test --code-coverage --watch=false",
     "site:build": "ng build --prod --build-optimizer",
     "site:gh": "ng build --prod --build-optimizer --base-href /ngx-filesaver/ && gh-pages -d ./dist",
-    "build": "bash ./build.sh",
-    "release:next": "bash ./build.sh && cd publish && npm publish --access public --tag next",
-    "release": "bash ./build.sh && cd publish && npm publish --access public"
-  },
-  "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@types/file-saver": "^1.3.0",
-    "core-js": "^2.5.4",
-    "file-saver": "^1.3.8",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "build": "node scripts/build.js",
+    "release:next": "npm run build && cd publish && npm publish --access public --tag next",
+    "release": "npm run build && cd publish && npm publish --access public"
   },
   "peerDependencies": {
     "@types/file-saver": "^1.3.0",
     "file-saver": "^1.3.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "~6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/language-service": "^6.0.0",
+    "@angular/animations": "^6.1.8",
+    "@angular/common": "^6.1.8",
+    "@angular/compiler": "^6.1.8",
+    "@angular/core": "^6.1.8",
+    "@angular/forms": "^6.1.8",
+    "@angular/http": "^6.1.8",
+    "@angular/platform-browser": "^6.1.8",
+    "@angular/platform-browser-dynamic": "^6.1.8",
+    "@angular/router": "^6.1.8",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.2.0",
+    "zone.js": "~0.8.26",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "~6.2.1",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -68,19 +60,28 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
-    "rollup": "^0.49.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-uglify": "^2.0.1",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~2.9.2",
+    "ng-packagr": "^4.1.1",
+    "@types/file-saver": "^1.3.0",
+    "file-saver": "^1.3.8"
+  },
+  "ngPackage": {
+    "lib": {
+      "entryFile": "lib/index.ts",
+      "amdId": "ngxFileSaver",
+      "umdId": "ngxFileSaver",
+      "umdModuleIds": {
+        "file-saver": "saveAs"
+      }
+    },
+    "dest": "./publish"
   }
 }
