--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-filesaver",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "Simple file save with FileSaver.js",
   "repository": {
     "type": "git",
@@ -33,45 +33,45 @@
     "release": "npm run build && cd publish && npm publish --access public"
   },
   "peerDependencies": {
-    "@types/file-saver": "^1.3.0",
-    "file-saver": "^1.3.8"
+    "@types/file-saver": "^2.0.0",
+    "file-saver": "^2.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "^6.1.8",
-    "@angular/common": "^6.1.8",
-    "@angular/compiler": "^6.1.8",
-    "@angular/core": "^6.1.8",
-    "@angular/forms": "^6.1.8",
-    "@angular/http": "^6.1.8",
-    "@angular/platform-browser": "^6.1.8",
-    "@angular/platform-browser-dynamic": "^6.1.8",
-    "@angular/router": "^6.1.8",
+    "@angular/animations": "~7.1.0",
+    "@angular/common": "~7.1.0",
+    "@angular/compiler": "~7.1.0",
+    "@angular/core": "~7.1.0",
+    "@angular/forms": "~7.1.0",
+    "@angular/platform-browser": "~7.1.0",
+    "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
-    "rxjs": "~6.2.0",
+    "rxjs": "~6.3.3",
+    "tslib": "^1.9.0",
     "zone.js": "~0.8.26",
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.1",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "~7.1.0",
+    "@angular/compiler-cli": "~7.1.0",
+    "@angular/language-service": "~7.1.0",
     "@types/node": "~8.9.4",
-    "codecov": "^3.0.0",
-    "codelyzer": "~4.2.1",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
+    "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2",
-    "ng-packagr": "^4.1.1",
-    "@types/file-saver": "^1.3.0",
-    "file-saver": "^1.3.8"
+    "typescript": "~3.1.6",
+    "ng-packagr": "^4.4.0",
+    "tsickle": "^0.34.0",
+    "@types/file-saver": "^2.0.0",
+    "file-saver": "^2.0.0"
   },
   "ngPackage": {
     "lib": {
