feat: add `filesaver__not-support` & `filesaver__disabled`
- close #11

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-filesaver",
-  "version": "2.2.1",
+  "version": "8.0.0",
   "description": "Simple file save with FileSaver.js",
   "repository": {
     "type": "git",
@@ -11,10 +11,8 @@
     "FileSaver",
     "FileSaver.js",
     "ngx-filesaver",
-    "angular2",
-    "ng2",
-    "angular2-filesaver",
-    "ng2-filesaver"
+    "angular filesaver",
+    "ng filesaver"
   ],
   "author": "cipchk <cipchk>",
   "license": "MIT",
@@ -23,11 +21,11 @@
   },
   "homepage": "https://github.com/cipchk/ngx-filesaver#readme",
   "scripts": {
-    "analyze": "ng build --prod --build-optimizer --stats-json",
+    "analyze": "ng build --prod --stats-json",
     "lint": "tslint -p tsconfig.json -c tslint.json 'lib/*/*.ts'",
     "test": "ng test --code-coverage --watch=false",
-    "site:build": "ng build --prod --build-optimizer",
-    "site:gh": "ng build --prod --build-optimizer --base-href /ngx-filesaver/ && gh-pages -d ./dist",
+    "site:build": "ng build --prod",
+    "site:gh": "ng build --prod --base-href /ngx-filesaver/ && gh-pages -d ./dist",
     "build": "node scripts/build.js",
     "release:next": "npm run build && cd publish && npm publish --access public --tag next",
     "release": "npm run build && cd publish && npm publish --access public"
@@ -37,39 +35,37 @@
     "file-saver": "^2.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "@angular/animations": "~8.0.1",
+    "@angular/common": "~8.0.1",
+    "@angular/compiler": "~8.0.1",
+    "@angular/core": "~8.0.1",
+    "@angular/forms": "~8.0.1",
+    "@angular/platform-browser": "~8.0.1",
+    "@angular/platform-browser-dynamic": "~8.0.1",
+    "@angular/router": "~8.0.1",
+    "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.0",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "zone.js": "~0.9.1",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.3",
+    "@angular/compiler-cli": "~8.0.1",
+    "@angular/language-service": "~8.0.1",
     "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
-    "ng-packagr": "^4.7.0",
-    "tsickle": "^0.34.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3",
+    "ng-packagr": "^5.3.0",
     "@types/file-saver": "^2.0.0",
     "file-saver": "^2.0.0",
     "gh-pages": "^2.0.1",
