--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ addons:
       - google-chrome
     packages:
       - google-chrome-stable
-      - google-chrome-beta
 
 git:
   depth: 1
@@ -20,9 +19,11 @@ cache:
     - ./node_modules
 
 before_install:
-  - export CHROME_BIN=chromium-browser
+  - set -e
+  - export NG_CLI_ANALYTICS=ci
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - sleep 3
 
 env:
   - TASK=build
