--- a/.travis.yml
+++ b/.travis.yml
@@ -2,30 +2,21 @@ sudo: required
 dist: trusty
 language: node_js
 
-node_js:
-  - '10.9.0'
-
-addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
-
 git:
   depth: 1
 
 cache:
-  npm: true
+  yarn: true
   directories:
-    - ./node_modules/
+    - ./node_modules
+
+addons:
+  chrome: stable
 
 before_install:
-  - set -e
-  - export NG_CLI_ANALYTICS=ci
+  - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - sleep 3
 
 env:
   - TASK=build
