--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /tmp
 /out-tsc
 /publish
-yarn.lock
+/yarn.lock
 
 # dependencies
 /node_modules
@@ -35,7 +35,6 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
-yarn.lock
 
 # System Files
 .DS_Store
