--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,5 @@
 {
   "printWidth": 140,
   "singleQuote": true,
-  "semi": true,
-  "trailingComma": "all",
-  "overrides": [
-    {
-      "files": ".prettierrc",
-      "options": {
-        "parser": "json"
-      }
-    }
-  ]
+  "trailingComma": "all"
 }
