--- a/lib/tsconfig.lib.json
+++ b/lib/tsconfig.lib.json
@@ -1,17 +1,15 @@
 {
-  "extends": "../tsconfig.base.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "alwaysStrict": true,
-    "sourceMap": true,
     "inlineSources": true,
-    "emitDecoratorMetadata": true,
-    "declaration": true,
     "strictFunctionTypes": true,
     "stripInternal": true
   },
-  "files": ["./src/module.ts"],
+  "files": ["./src/filesaver.module.ts"],
   "include": ["**/*.ts"],
   "angularCompilerOptions": {
-    "enableIvy": false
+    "enableIvy": true,
+    "compilationMode": "partial"
   }
 }
