build: upgrade angular to 12 (#30)

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,17 +3,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine",
-      "node"
-    ]
+    "types": ["jasmine"]
   },
-  "files": [
-    "lib/test.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "lib/**/*.spec.ts",
-    "lib/**/*.d.ts"
-  ]
+  "files": ["lib/test.ts", "src/polyfills.ts"],
+  "include": ["lib/**/*.spec.ts", "lib/**/*.d.ts"]
 }
