--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-filesaver",
-  "version": "13.0.0",
+  "version": "14.0.0",
   "description": "Simple file save with FileSaver.js",
   "keywords": [
     "angular",
@@ -8,7 +8,8 @@
     "FileSaver.js",
     "ngx-filesaver",
     "angular filesaver",
-    "ng filesaver"
+    "ng filesaver",
+    "angular standalone library"
   ],
   "author": "cipchk <cipchk>",
   "license": "MIT",
