--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: run
         run: |
-          ./node_modules/@angular/cli/bin/ng lint
+          yarn run lint
 
   site:
     runs-on: ubuntu-latest
