--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,12 +60,12 @@ jobs:
 
       - name: build
         run: |
-          node --max_old_space_size=5120 ./node_modules/@angular/cli/bin/ng build --base-href /ngx-filesaver/
-          cp ./dist/index.html ./dist/404.html
-          ls ./dist
+          node ./node_modules/@angular/cli/bin/ng build --base-href /ngx-filesaver/
+          cp ./dist/browser/index.html ./dist/browser/404.html
+          ls ./dist/browser
 
       - name: deploy-to-gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./dist/browser
