--- a/lib/tsconfig.lib.json
+++ b/lib/tsconfig.lib.json
@@ -4,12 +4,11 @@
     "alwaysStrict": true,
     "inlineSources": true,
     "strictFunctionTypes": true,
-    "stripInternal": true
+    "stripInternal": true,
+    "declarationMap": false
   },
-  "files": ["./src/filesaver.module.ts"],
   "include": ["**/*.ts"],
   "angularCompilerOptions": {
-    "enableIvy": true,
     "compilationMode": "partial"
   }
 }
